--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "polished": "^4.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icon": "^1.0.0",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "polished": "^4.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
